--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -32,3 +32,23 @@ a.ctaLink:visited {
   padding: 0.8rem 2rem;
   border-radius: 7px;
 }
+
+/*PHONE (≤ 600px) */
+@media (max-width: 600px) {
+  .nav {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .nav a:link,
+  .nav a:visited {
+    text-decoration: none;
+    color: var(--color-light--2);
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+}
