--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -8,3 +8,19 @@
   align-items: center;
   height: calc(100vh - 4.8rem);
 }
+
+/* TABLET (≤ 1024px)*/
+@media (max-width: 1024px) {
+  .sidebar {
+    padding: 3rem 2rem 3.5rem 2rem;
+  }
+}
+
+/*PHONE (≤ 600px) */
+@media (max-width: 600px) {
+  .sidebar {
+    width: 100vw;
+    padding: 3rem;
+    height: 25%;
+  }
+}
